Created API for setting availability
