# ruby/app/controllers/api/v1/users_controller.rb
@@ -14,8 +14,18 @@ class Api::V1::UsersController < ApplicationController
         emergency_contact: current_user.emergency_contact,
         emergency_contact_number: current_user.emergency_contact_number,
         role: current_user.role,
+        is_available: current_user.is_available,
         profile_photo_path: current_user.profile_photo.attached? ? Rails.application.routes.url_helpers.rails_blob_path(current_user.profile_photo, only_path: true) : nil
       }, status: :ok
+    else
+      render json: { error: 'User not found' }, status: :not_found
+    end
+  end
+
+  def toggle_availability
+    if current_user
+      current_user.update(is_available: !current_user.is_available)
+      render json: { is_available: current_user.is_available }, status: :ok
     else
       render json: { error: 'User not found' }, status: :not_found
     end
